<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pet_care"
    tools:context=".Shelter">

    <TextView
        android:id="@+id/heading"
        android:layout_width="177dp"
        android:layout_height="78dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="100dp"
        android:text="@string/welcome_to_appointment_portal"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#9E2D43"
        android:textSize="22sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03"
        tools:text="Welcome to Appoinment Portal"
        tools:visibility="visible" />

    <Button
        android:id="@+id/bookappoinment"
        android:layout_width="145dp"
        android:layout_height="43dp"
        android:layout_marginTop="392dp"
        android:background="@color/purple_500"
        android:text="@string/book_appoinment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.892"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/checkdetails"
        android:layout_width="142dp"
        android:layout_height="44dp"
        android:layout_marginTop="12dp"
        android:background="@color/purple_500"
        android:text="@string/check_details"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.874"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookappoinment"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>